--- a/Day-2/.vscode/settings.json
+++ b/Day-2/.vscode/settings.json
@@ -4,5 +4,8 @@
         "Hasan",
         "HSTU",
         "mahmudul"
-    ]
+    ],
+    "indentOneSpace.cramReversed": true,
+    "indentOneSpace.workOnSingleLine": true,
+    "indentOneSpace.onlyCompleteRange": true
 }
